History of this buildout
========================

5.0 - Plone 4 Branch (unreleased)
---------------------------------

- Added a plone41 migration profile that is applied during an upgrade
  step of Products.minaraad.  Here we can put import steps that should
  be run once for the migration.  Currently just the skins.xml.  We
  add the new mina_styles layer only to the Minaraad Theme there.
  [maurits]

- Moved all css from the minaraad to the new mina_styles skin layer.
  [maurits]

- Fixed AttributeError when deleting a normal file from a meeting.
  Normal files do not have a contains_pdf method.
  [maurits]

- Configure blob storage.  Blobs are stored in postgres.  The zope
  instance caches them in var/blobcache.
  [maurits]

- Updated buildout config to Plone 4.1.2 and updated the code so the
  instance starts.  The TTW migration does not work yet.
  [maurits]


4.0 (unreleased)
----------------

- Restructure buildout configs to match the setup of LNE and use
  RelStorage.  No more zeoserver and zeoclient.
  [maurits]


3.16 (2011-10-04)
-----------------

- Fixed cronjob for the projects reminder mail.
  [maurits]


3.15 (2011-10-04)
-----------------

- Customized getGlobalPortalRoles; change compared to standard Plone:
  exclude not only Owner, but also ProjectMember.
  [maurits]

- Removed our local roles DigibibViewer and ProjectMember from the
  sharing tab: DigibibViewer should be set globally for a group and
  ProjectMember is handled automatically with borg.localrole.
  [maurits]

- Translate the DigibibViewer and ProjectMember roles.
  [maurits]

- Changed cronjob times to 10 o' clock on Tuesday and Thursday.
  [maurits]


3.14 (2011-10-03)
-----------------

- Configure cron job for notifying of projects.
  [maurits]


3.13 (2011-10-03)
-----------------

- Fixed javascript for submit button in forms that do not have an
  attachment field.
  [maurits]

- Do not show the product number on the project when it has not been