@@ -183,50 +183,17 @@ To do on Plone 4 through the web
 
 - Run the Plone migration.
 
+- Run the upgrade steps of Products.minaraad in portal_setup.
+
 - Configure plone.app.caching (not much was previously cached in
   CacheSetup though, so not very critical).  I have not tried this
   yet.
 
-- Create a "Minaraad theme" skin layer with the following layers:
-custom
-minaraad
-mina_projects
-mina_styles
-tinymce
-referencebrowser
-CMFPlacefulWorkflow
-LanguageTool
-sunburst_images
-sunburst_templates
-sunburst_styles
-attachment_widgets
-simpleattachment
-cmfeditions_views
-CMFEditions
-kupu_tests
-orderablereferencefield
-PasswordReset
-kupu_plone
-kupu
-ATContentTypes
-archetypes
-mimetypes_icons
-plone_ecmascript
-plone_wysiwyg
-plone_prefs
-plone_templates
-plone_form_scripts
-plone_scripts
-plone_forms
-plone_images
-plone_content
-plone_login
-plone_deprecated
-plone_3rdParty
-cmf_legacy
-plone_kss
-archetypes_kss
-pyproxy
+- Create a "Minaraad Theme" skin layer with the following layers.
+  This is now also done by an upgrade step; see
+  Producst/minaraad/profiles/plone41/skins.xml and please update the
+  list of canonical layers there in case this is needed.
 
-It is based on SUnburst theme. It still needs a few adjustments. No
-need to define the portlets, they are included by default.
+  The theme is based on Sunburst Theme.  It still needs a few
+  adjustments.  No need to define the portlets, they are included by
+  default.
